--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <body>
   <div class="container">
     <h1>Will You Be My Girlfriend? 💖</h1>
-    <div class="subtitle">❣️I will make you happy always❣️</div>
+    <div class="subtitle">❣️I Love you Sus❣️</div>
     <div class="buttons">
       <button id="yesBtn">Yes 💕</button>
       <button id="noBtn">No 😢</button>
@@ -174,6 +174,14 @@
       <img src="c.jpg" alt="Memory 3" />
       <img src="d.jpg" alt="Memory 4" />
       <img src="e.jpg" alt="Memory 5" />
+      <img src="f.jpg" alt="Memory 6" />
+      <img src="g.jpg" alt="Memory 7" />
+      <img src="h.jpg" alt="Memory 8" />
+      <img src="i.jpg" alt="Memory 8" />
+      <img src="j.jpg" alt="Memory 10" />
+      <img src="k.jpg" alt="Memory 11" />
+      <img src="l.jpg" alt="Memory 12" />
+      <img src="m.jpg" alt="Memory 13" />
     </div>
   </div>
 
