--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Will You Be My Girlfriend? 💖</h1>
+    <h1>Will You Marry Me Sus? 💖</h1>
     <div class="subtitle">❣️I Love you Sus❣️</div>
     <div class="buttons">
       <button id="yesBtn">Yes 💕</button>
