--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       <button id="yesBtn">Yes 💕</button>
       <button id="noBtn">No 😢</button>
     </div>
-    <div id="sadMessage">💔Oh No 💔</div>
+    <div id="sadMessage">💔Oh No  💔</div>
     <div id="slideshow">
       <img src="a.jpg" class="active" alt="Memory 1" />
       <img src="b.jpg" alt="Memory 2" />
@@ -248,7 +248,7 @@
       emojiInterval = setInterval(() => {
         showEmojiShower(emoji1);
         showEmojiShower(emoji2);
-      }, 1500);
+      }, 6000);
 
       music.onended = () => {
         clearInterval(emojiInterval);
@@ -260,7 +260,7 @@
       noMusic.pause(); noMusic.currentTime = 0;
       yesMusic.play();
       startFireworks();
-      startEmojiBurstDuringMusic(yesMusic, '💐', '💖');
+      startEmojiBurstDuringMusic(yesMusic, '❣️');
       sendResponse('Yes');
     });
 
@@ -269,7 +269,7 @@
       sadMessage.style.display = 'block';
       yesMusic.pause(); yesMusic.currentTime = 0;
       noMusic.play();
-      startEmojiBurstDuringMusic(noMusic, '😢', '😭');
+      startEmojiBurstDuringMusic(noMusic, '😢');
       sendResponse('No');
     });
 
@@ -314,7 +314,7 @@
     }
 
     function createFireworks() {
-      for (let i = 0; i < 50; i++) {
+      for (let i = 0; i < 100; i++) {
         particles.push(new Particle(
           Math.random() * fireworksCanvas.width,
           Math.random() * fireworksCanvas.height * 0.6 + fireworksCanvas.height * 0.2,
